API-Organizador-Eventos/API-Organizador-Eventos/src/main/kotlin/com/example/API_Organizador_Eventos/error/ErrorRespuesta.kt
package com.example.API_Organizador_Eventos.error

data class ErrorRespuesta(
    var message: String,
    var uri: String
)